--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 streamlit==1.25.0
+streamlit-drawable-canvas==0.9.3
 opencv-python-headless
 numpy
 Pillow
 streamlit-cropper
-streamlit-drawable-canvas
 scikit-image
 matplotlib
 seaborn
