--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-streamlit>=1.33.0
+streamlit==1.32.0
 git+https://github.com/andfanilo/streamlit-drawable-canvas.git@main
 streamlit-cropper==0.2.2
 opencv-python-headless
